# fast_api_learning

./: Dockerfile  docker-compose.yml  pyproject.toml
app/: main.py
app/db/: connection.py  models.py
app/migrations/versions/: 016e37bbd762_add_products_table.py  6a5e101a84fe_add_products_table.py  9202ca9303d5_add_categories_table.py  faeacd959eec_add_products_table.py
app/routes/: category_routes.py  deps.py  product_routes.py
app/schemas/: category.py  product.py
app/test/: conftest.py
app/test/routes/: test_category_routes.py  test_products_routes.py
app/test/schemas/: test_category_schema.py  test_product_schema.py
app/test/use_cases/: test_category_use_cases.py  test_product_use_cases.py
app/use_cases/: category.py  product.py
